--- a/assets/style.css
+++ b/assets/style.css
@@ -55,10 +55,14 @@ nav .links li .about {
 .box {
     width:90%;
     height:auto;
-    margin:100px auto;
+    position:absolute;
+    top:50%;
+    left:50%;
+    transform:translate(-50%, -50%);
     display:flex;
     justify-content: center;
     align-items:center;
+    z-index:1;
 }
 
 .box main {
@@ -108,6 +112,7 @@ nav .links li .about {
 .grid img {
     width:100%;
     border-radius:50%;
+    opacity:0.3;
 }
 
 @keyframes animate {
@@ -161,6 +166,7 @@ nav .links li .about {
     }
 
     .box {
+        margin-top:50px;
         width:80%;
         display:grid;
         grid-template-columns: repeat(12, 1fr);
